--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-tsparticles": "^2.10.1",
     "tailwindcss": "3.3.2",
+    "tsparticles": "^2.10.1",
     "typescript": "5.1.6"
   }
 }
