--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "create-next-app": "^13.4.9",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "framer-motion": "^10.15.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
